--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ NOTE_ICON_FILETREE=true
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-ribbon show-view-header css-settings-manager is-maximized is-focused
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-ribbon show-view-header is-maximized css-settings-manager is-focused align-title-center ss-title-solid heading-ligatures mathjax-font-default circled-ol ss-links-sc blockquote-plain callout-border-gradient align-left obsidian
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/isax785/obsidian-sparkling-night/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/hungsu/typomagical-obsidian/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
